--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,21 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="light_background">#FFFFFF</color>
+    <color name="light_text">#000000</color>
+
+    <!-- <color name="colorPrimary">#3700B3</color> -->
+
+    <!-- <color name="colorPrimaryDark">#000000</color> -->
+
+    <!-- <color name="light_background">#121212</color> -->
+
+    <!-- <color name="light_text">#FFFFFF</color> -->
 </resources>
